--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,5 @@
-add_library(ebus ebus/ebus.cc)
+add_library(ebus
+  ebus/ebus.cc
+  task/task_worker.cc
+)
 target_include_directories(ebus PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
