Adding namespace definition to the ebus
This patch allows custom namespace applied to ebus and intrusive
interface. This allows me to include intrusive_ptr in another project without
interfering with ebus headers. Simply by setup the namespace to a different
one, both ebus and intrusive_ptr will use that namespace.

Signed-off-by: Xichen (Sichem) Zhou <sichem.zh@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,15 @@ set(CMAKE_CXX_STANDARD 20) # for concepts
 set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${PROJECT_SOURCE_DIR}/cmake")
 option(EBUS_ENABLE_TESTING "enable testing" ON)
 
+if(NOT DEFINED EBUS_NAMESPACE)
+  set(EBUS_NAMESPACE "ebus")
+endif()
+
+if (NOT DEFINED ITRV_NAMESPACE)
+  set(INTRUSIVE_NAMESPACE ${EBUS_NAMESPACE})
+endif()
+
+
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Debug)
 endif()
@@ -22,6 +31,11 @@ add_library(ebus
 target_include_directories(ebus
   PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include"
   PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")
+
+target_compile_definitions(ebus PUBLIC
+  EBUS_NS=${EBUS_NAMESPACE}
+  INTRUSIVE_NS=${INTRUSIVE_NAMESPACE})
+
 
 if (${EBUS_ENABLE_TESTING})
   add_subdirectory(test)
