misc: change default namespace
Update namespace definitions in multiple files to use "_ebus_" and "_itrv_"
instead of "ebus" and "ITRV_NS", and adjust include paths accordingly.

Since `ebus` is also a class name, it confuses the compiler when using it.

Signed-off-by: Xichen (Sichem) Zhou <sichem.zh@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${PROJECT_SOURCE_DIR}/cmake")
 option(EBUS_ENABLE_TESTING "enable testing" ON)
 
 if(NOT DEFINED EBUS_NAMESPACE)
-  set(EBUS_NAMESPACE "ebus")
+  set(EBUS_NAMESPACE "_ebus_")
 endif()
 
 if (NOT DEFINED ITRV_NAMESPACE)
