task_scheduler: adding test to oneshot task
Signed-off-by: Xichen (Sichem) Zhou <sichem.zh@gmail.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -42,4 +42,8 @@ target_link_libraries(test_ebus_ref PRIVATE Catch2::Catch2WithMain ebus)
 catch_discover_tests(test_ebus_ref)
 
 
+add_executable(test_scheduler test_task_scheduler.cc)
+target_link_libraries(test_scheduler PRIVATE Catch2::Catch2WithMain ebus)
+catch_discover_tests(test_scheduler)
+
 #then I can simply run `ctest --test-dir build/test` to run the tests
