fixing a typo for intrusive namespace
Signed-off-by: Xichen (Sichem) Zhou <sichem.zh@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ if(NOT DEFINED EBUS_NAMESPACE)
   set(EBUS_NAMESPACE "_ebus_")
 endif()
 
-if (NOT DEFINED ITRV_NAMESPACE)
+if (NOT DEFINED INTRUSIVE_NAMESPACE)
   set(INTRUSIVE_NAMESPACE ${EBUS_NAMESPACE})
 endif()
 
