--- a/.github/workflows/cpp.yaml
+++ b/.github/workflows/cpp.yaml
@@ -49,11 +49,11 @@ jobs:
 
       - name: Configure project (Win32)
         if: matrix.os == 'windows-latest'
-        run: cmake --build ${{github.workspace}}/build --config Release
+        run: cmake -S${{github.workspace}} -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Release
 
       - name: Configure project (Ubuntu)
         if: matrix.os == 'ubuntu-latest'
-        run: cmake --build ${{github.workspace}}/build --config Release -G Ninja
+        run: cmake -S${{github.workspace}} -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Release -G Ninja
 
       - name: Build Project
         run: cmake -B ${{github.workspace}}/build
